<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/et_length"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:autofillHints=""
        android:hint="@string/enter_length_in_inches"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="16dp" />

    <EditText
        android:id="@+id/et_width"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:autofillHints=""
        android:textAlignment="center"
        android:hint="@string/enter_width_in_inches"
        android:inputType="numberDecimal"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="70dp" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity=""
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textAlignment="center"
            android:text="@string/select_thickness"
            />
        <Spinner
            android:id="@+id/s_thickness"
            android:layout_width="wrap_content"
            android:spinnerMode="dropdown"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_result"
            android:layout_width="match_parent"
            android:layout_height="380dp"
            android:layout_margin="20dp"
            android:textAlignment="center"
            android:textSize="40sp"
            tools:layout_editor_absoluteX="36dp"
            tools:layout_editor_absoluteY="70dp" />
    </LinearLayout>

    <RelativeLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_calculate"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="13dp"
            android:text="@string/calculate"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btn_clear"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="113dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="12dp"
            android:text="@string/clear"
            android:textAlignment="center" />
    </RelativeLayout>
</LinearLayout>